--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/index.89a9279e.css">
   </head>
   <body>
-    <div id="root"></div>s
+    <div id="root"></div>
     
   </body>
 </html>
